# ROS2_MemoryDrive

./: .clang-format  .gitignore  MemoryVsActual.py  README.md  auto_drive_log.txt  car_frontsteer  gazebo_ros_ackermann_drive_demo.world  gps_data.txt  plot_trajectory.py  smooth_trajectory.cpp  smooth_trajectory.py  smooth_trajectory.txt  smoothed_gps_data.txt  smoothed_trajectory_log.txt
install/: local_setup.sh  setup.sh
install/track_car/lib/track_car/: alg_main  control_node  track_car_node
install/track_car/share/ament_index/resource_index/package_run_dependencies/: track_car
install/track_car/share/ament_index/resource_index/parent_prefix_path/: track_car
install/track_car/share/track_car/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/track_car/share/track_car/cmake/: track_carConfig-version.cmake  track_carConfig.cmake
install/track_car/share/track_car/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
src/track_car/: CMakeLists.txt
src/track_car/include/track_car/: AutoDriveControl.hpp  MemoryDrive.hpp  MemoryTrajectoryGenerate.hpp
src/track_car/src/: AutoDriveControl.cpp  MemoryDrive.cpp  MemoryTrajectoryGenerate.cpp  alg_main.cpp  control_node.cpp  track_car_node.cpp
